NIFI-14307 Closing response entity stream after reading in ElasticSearchClientServiceImpl